	screens on a single device

    o	After help.start() the HTML help system is used for all help()
	requests. The name of the browser is now controlled by
	options("browser").

    o	Added kmeans to package mva (donated by B. Ripley)

    o	New persp function added.  It is NOT compatible with S (yet)
	and is subject to internal and interface changes.

BUG FIXES

    o	substring("", NULL) no longer segfaults.

    o	formatC(.) now takes default "width = 1" when both width and digits
	are unspecified.

    o	several fixes in internal axis and tickmarks setup for
	"extreme" ranges and values, especially for "log" scaling.

    o	seq(a,a, by=b) now works properly.

    o	print.data.frame(.) now calls print.matrix instead of print(.)
	which finally enables the 'right = TRUE' argument.

    o	R --help  gives more

    o	postscript() now uses 'hyphen' instead of 'plusminus' for a minus.

    o	source(..., echo=TRUE) now puts a `"' if necessary after truncation.

    o	Changes to the PostScript device driver mean that the volume
	of output has been reduced to about a third of what it was.

    o	Fixes and restructuring to name generation in connection with
	unlist() and c().


		CHANGES IN R VERSION 0.62.4
BUG FIXES

    o	plot.default(.) has now 'sub' argument which eliminates
	"Warning: parameter "sub" couldn't be set in high-level plot() function"

    o	formatC(numeric(0)) now works.

    o	menu(.) works for empty imput

    o	0i ^ 2	now gives  0+0i as it should.

    o	ppoints() now behaves like S, and has additional argument 'a'

    o	seq(1,6,by=3) and similar "by" calls now work okay

    o	mahalanobis(.) now fixed; does *NOT* have default arguments for
	center and cov anymore.

    o	diag(.) doesn't return non-sensical dimnames anymore.


		CHANGES IN R VERSION 0.62.3

NEW FEATURES

    o	preserve factor levels and contrast settings in model objects

    o	factor[...,drop=T] reduces level set

    o	added dblepr, intpr
