@@ -1,3 +1,6 @@
-range <- function(..., na.rm=FALSE, finite=FALSE)
-    if(finite) { x <- c(...); x <- x[is.finite(x)]; c(min(x), max(x))
-	     } else c(min(..., na.rm=na.rm),max(..., na.rm=na.rm))
+range <- function(..., na.rm=FALSE, finite=FALSE) {
+    x <- c(...)
+    if(finite) x <- x[is.finite(x)]
+    else if(na.rm) x <- x[!is.na(x)]
+    if(length(x)) c(min(x), max(x)) else NA
+}
